<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menuprinc">

    <Button
        android:id="@+id/button2"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_marginTop="412dp"
        android:background="@drawable/oval_button"
        android:backgroundTint="#514F4F"
        android:onClick="btnfrutas"
        android:text="@string/btn_frutas"
        android:textColor="#F9F9F9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/oval_button"
        android:backgroundTint="#514F4F"
        android:onClick="btnanimais"
        android:text="@string/btn_animais"
        android:textAlignment="center"
        android:textColor="#F9F9F9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:layout_constraintVertical_bias="0.149" />

    <Button
        android:id="@+id/button5"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/oval_button"
        android:backgroundTint="#514F4F"
        android:onClick="btnmarcas"
        android:text="@string/btn_marcas"
        android:textColor="#F9F9F9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4"
        app:layout_constraintVertical_bias="0.191" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="297dp"
        android:layout_height="316dp"
        android:layout_marginBottom="28dp"
        android:adjustViewBounds="true"
        android:background="#F9F9F9"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/logo_cinza" />
</androidx.constraintlayout.widget.ConstraintLayout>